WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296565
[WebXR][OpenXR] Fix missing PFNEGLGETPROCADDRESSPROC symbol
https://bugs.webkit.org/show_bug.cgi?id=296565
Summary
[WebXR][OpenXR] Fix missing PFNEGLGETPROCADDRESSPROC symbol
Simon Pena
Reported
2025-07-28 06:46:57 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Pena
Comment 1
2025-07-28 06:52:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48604
EWS
Comment 2
2025-07-29 02:28:09 PDT
Committed
297975@main
(82e04c5bdb50): <
https://commits.webkit.org/297975@main
> Reviewed commits have been landed. Closing PR #48604 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-07-29 02:29:17 PDT
<
rdar://problem/156997924
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug