[WebXR][OpenXR] Fix missing PFNEGLGETPROCADDRESSPROC symbol https://bugs.webkit.org/show_bug.cgi?id=296565

Reviewed by Sergio Villar Senin.

Define PFNEGLGETPROCADDRESSPROC before including openxr_platform.

* Source/WebKit/UIProcess/XR/openxr/OpenXRSwapchain.h:

Canonical link: https://commits.webkit.org/297975@main